# grid-terminal

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
Open-Source Code/: LICENSE
Open-Source Code/systems/architecture/: deploy-simple-token.js  initialize-hook.js
Open-Source Code/systems/auth/: credentials.env.example
Open-Source Code/systems/governance/: ONCHAIN_GOVERNANCE.md
Open-Source Code/systems/guardian_license_sale/guardian_license_sale/programs/guardian_license_sale/: Cargo.toml
Open-Source Code/systems/guardian_license_sale/guardian_license_sale/programs/guardian_license_sale/src/: lib.rs
Open-Source Code/systems/token/: .env.example  ADR_TRANSFER_FEE.md  BURN_OPTIMIZATION.md  LP_LOCK_STRATEGY.md  METADATA.md  PRESALE_STRATEGY.md  RESEARCH.md  (+4 more)
Open-Source Code/systems/token/programs/: .gitignore  Anchor.toml  Cargo.toml  deploy-policy-system.sh
Open-Source Code/systems/token/programs/grid-fee-sweep/: Cargo_clean.toml  Cargo_patched.toml  find_2024.sh  search_destroy.sh
Open-Source Code/systems/token/programs/grid-fee-sweep/src/: lib.rs
Open-Source Code/systems/token/programs/grid-transfer-hook/: Cargo.toml
Open-Source Code/systems/token/programs/grid-transfer-hook/grid-transfer-hook/src/: lib.rs
Open-Source Code/systems/token/programs/grid-transfer-hook/src/: lib.rs
Open-Source Code/terminal/: package.json  tsconfig.json
Source Code/: .gitignore  README.md  README_OPENSOURCE.md
Source Code/systems/governance/programs/policy-guard/: Cargo.toml
Source Code/systems/governance/programs/policy-guard/src/: lib.rs
Source Code/terminal/: package.json
docs/: 09_constitution.md  AGENT_IDENTITY.md  CONSTITUTION.md  GRID_TOKEN_SPEC.md  IDENTITY_ENFORCEMENT.md  INDUSTRIAL_WORKFLOW.md  INSURANCE_SPEC.md  KNOWLEDGE_CORE.md  KYA_SPEC.md  LOGGING_SPEC.md  SOVEREIGN_SWARM_WHITEPAPER_V3.1.md  TOKENOMICS.md  VEGRID_SPEC.md  doctrine-v2.md  grid-vision.md  guardian_nodes.md  legal_terms.md  metadata.json  node_sale.md  summary.md  x402_PROTOCOL.md
media/: README.md
outreach/: awg_draft.md
scripts/: deploy_part1_infrastructure.sh  deploy_part2_governance.sh  deploy_part3_mint.mjs  deploy_part3_token.sh  fix_build.sh  launch_v3.1_devnet_master.sh  update_ids.mjs  update_ids.ts
terminal/: SKILL.md
(+96 files in other folders)
