[workspace]
members = ["grid-transfer-hook", "grid-fee-sweep"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[patch.crates-io]
indexmap = { git = "https://github.com/indexmap-rs/indexmap.git", tag = "2.2.6" }
