[package]
name = "policy-guard"
version = "0.1.0"
description = "Constitutional enforcement program for $GRID treasury"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy_guard"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
